fixed button spacings for asset widget.

--- a/app/resources/styles/honeybee.css
+++ b/app/resources/styles/honeybee.css
@@ -499,7 +499,7 @@ input.typeahead
   float: left;
   width: 140px;
   height: 130px;
-  margin-left: 0px;
+  margin-left: 25px;
   margin-bottom: 25px;
   position: relative;
   border: 1px solid #ababab;
@@ -544,7 +544,7 @@ input.typeahead
 
 .widget-asset-list .image-buttons li:first-child
 {
-  margin-left: 18px;
+  margin-left: 0px;
 }
 
 .widget-asset-list .asset-item h5
@@ -782,7 +782,7 @@ div.select2-container-multi .select2-choices .select2-search-field
 .modal-reference-list
 {
   width: 90%;
-  top: 40%;
+  top: 5%;
   bottom: 5%;
   margin-left: -45%;
 }
@@ -796,8 +796,8 @@ div.select2-container-multi .select2-choices .select2-search-field
 {
   padding: 0px;
   width: 100%;
-  height: 86%;
-  max-height: 90%;
+  height: 89.3%;
+  max-height: 94%;
   margin: 0;
   position: relative;
   overflow: hidden;
